Respect Lock boolean in configuration

If not set to require password, don't start the grace period timer and
always consider in grace period.

REVIEW: 108425
BUG: 310871
FIXED-IN: 4.10.1